namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pvargas
  labels:
    app: reticules
