api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: reticules
spec:
  selector:
    matchLabels:
      app: reticules
  replicas: 7
  template:
    metadata:
      labels:
        app: reticules
    spec:
      volumes:
        - name: persistent-volume-storage
          persistentVolumeClaim:
            claimName: persistence-volume-claim
      containers:
        - name: database
          image: postgres:14.6-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: persistent-volume-storage

        - name: backend
          image: "pabloitl/rest-api:1.0"
          ports:
            - containerPort: 8080
