backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: reticules
spec:
  selector:
    matchLabels:
      app: reticules
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: reticules
        tier: backend
    spec:
      containers:
      - name: api
        image: pabloitl/rest-api:2.0
