database.yml
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: reticules
    tier: storage
spec:
  volumes:
    - name: persistent-volume-storage
      persistentVolumeClaim:
        claimName: persistence-volume-claim
  containers:
    - name: database-container
      image: postgres:14.6-alpine
      ports:
        - containerPort: 5432
          name: "database"
      volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: persistent-volume-storage
