api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: reticules
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: reticules
