backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: reticules
    tier: backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: reticules
