database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: reticules
    tier: storage
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: reticules
